src/test/resources/tokens/invalid/double_missing_frac_part.unpick
unpick v3
const double
    5. = 0